первая часть инструкции

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,8 @@ nav:
   - Описание: index.md
   - О модуле:
     - Конфигурации: conf.md
+  - Возможности:
+    - Блокировка операций: 'Возможности/Возможнсть запретить выполение операций по стоп-факторам.md'
 theme:
   name: material
   language: ru
