--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ nav:
   - О модуле:
     - Конфигурации: conf.md
   - Возможности:
-    - Блокировка операций: 'Auto/Возможнсть запретить выполение операций по стоп-факторам.md'
+    - Блокировка операций: Auto/Возможнсть запретить выполение операций по стоп-факторам.md
 theme:
   name: material
   language: ru
