--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,9 @@ nav:
   - О модуле:
     - Конфигурации: conf.md
   - Возможности:
-    - Блокировка операций: Auto/Возможнсть запретить выполение операций по стоп-факторам.md
+    - Блокировка операций: 
+      - Настройка: Auto/Возможнсть запретить выполение операций по стоп-факторам.md
+      - Пример срабатывания: Auto/Блокировка операций.MD
 theme:
   name: material
   language: ru
