--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ nav:
   - Возможности:
     - Блокировка операций: 
       - Настройка: Auto/Возможнсть запретить выполение операций по стоп-факторам.md
-      - Пример срабатывания: Auto/Блокировка операций.MD
+      - Пример срабатывания: Auto/Блокировка операций.md
 theme:
   name: material
   language: ru
