--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,8 @@ nav:
   - Возможности:
     - Блокировка операций: 
       - Настройка: Auto/Возможнсть запретить выполение операций по стоп-факторам.md
-      - Пример: Auto/Блокировка операций.md
+      - Исключения: Auto/Блокировка операций.md
+      - Пример: Auto/Настройка исключений блокировки.md
 theme:
   name: material
   language: ru
