--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,3 +16,10 @@ theme:
   palette:
     primary: Green
     accent: indigo
+extra_css:
+  - assets/stylesheets/extra.css
+markdown_extensions:
+  - admonition
+  - codehilite
+  - toc:
+      permalink: true
