--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,9 @@ nav:
   - О модуле:
     - Конфигурации: conf.md
   - Возможности:
+    - Администрирование списков проверки:
+      - Панель администрирования списков проверки: Auto/list_admin/Панель Администрирование списков проверки.MD
+      - Создание списка проверки для пользователя: Auto/list_admin/Администрирование списков проверки.MD
     - Блокировка операций: 
       - Настройка: Auto/Возможнсть запретить выполение операций по стоп-факторам.md
       - Исключения: Auto/Настройка исключений блокировки.md
