Может проблема в расширении?

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,8 +5,8 @@ nav:
     - Конфигурации: conf.md
   - Возможности:
     - Администрирование списков проверки:
-      - Панель администрирования списков проверки: Auto/list_admin/Панель Администрирование списков проверки.MD
-      - Создание списка проверки для пользователя: Auto/list_admin/Администрирование списков проверки.MD
+      - Панель администрирования списков проверки: Auto/list_admin/Панель Администрирование списков проверки.md
+      - Создание списка проверки для пользователя: Auto/list_admin/Администрирование списков проверки.md
     - Блокировка операций: 
       - Настройка: Auto/Возможнсть запретить выполение операций по стоп-факторам.md
       - Исключения: Auto/Настройка исключений блокировки.md
