добавил описание доп. настроек

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
       - Панель администрирования списков проверки: Auto/list_admin/Панель Администрирование списков проверки.md
       - Создание списка проверки для пользователя: Auto/list_admin/Администрирование списков проверки.md
       - Групповое изменение владельца списков: Auto/list_admin/Групповое изменение владельца списков.md
+      - Дополнительные настройки: Auto/list_admin/Дополнительные настройки.md
     - Блокировка операций: 
       - Настройка: Auto/Возможнсть запретить выполение операций по стоп-факторам.md
       - Исключения: Auto/Настройка исключений блокировки.md
